fix nav on mobile

--- a/css/components/nav.scss
+++ b/css/components/nav.scss
@@ -14,6 +14,9 @@ nav.nav {
 		li {
 			padding-top: 20px;
 			height: 60px;
+			@media only screen and (max-width: 422px) {
+				padding: 5px;
+			}
 		}
 	}
 
@@ -30,6 +33,7 @@ nav.nav {
 			align-items: center;
 			text-align: center;
 			white-space: wrap;
+			margin-bottom: 0;
 		}
 		
 	}
